<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_home_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.kawi_niveau_mobile_app.ui.home.accueil.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_courses"
        android:name="com.example.kawi_niveau_mobile_app.ui.cours.CoursListFragment"
        android:label="@string/menu_courses"
        tools:layout="@layout/fragment_cours_list">
        
        <action
            android:id="@+id/action_courses_to_coursDetail"
            app:destination="@id/coursDetailFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/coursDetailFragment"
        android:name="com.example.kawi_niveau_mobile_app.ui.cours.CoursDetailFragment"
        android:label="Détail du Cours"
        tools:layout="@layout/fragment_cours_detail">
        
        <argument
            android:name="coursId"
            app:argType="long" />
        
        <action
            android:id="@+id/action_coursDetail_to_moduleDetail"
            app:destination="@id/moduleDetailFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/moduleDetailFragment"
        android:name="com.example.kawi_niveau_mobile_app.ui.cours.ModuleDetailFragment"
        android:label="Détail du Module"
        tools:layout="@layout/fragment_module_detail">
        
        <argument
            android:name="moduleId"
            app:argType="long" />
        
        <action
            android:id="@+id/action_moduleDetail_to_quizViewer"
            app:destination="@id/quizViewerFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/quizViewerFragment"
        android:name="com.example.kawi_niveau_mobile_app.ui.quiz.QuizViewerFragment"
        android:label="Quiz"
        tools:layout="@layout/fragment_quiz_viewer">
        
        <argument
            android:name="quizId"
            app:argType="long" />
        
        <argument
            android:name="moduleId"
            app:argType="long" />
    </fragment>

    <fragment
        android:id="@+id/nav_progress"
        android:name="com.example.kawi_niveau_mobile_app.ui.home.progres.ProgressFragment"
        android:label="@string/menu_progress"
        tools:layout="@layout/fragment_progress" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.kawi_niveau_mobile_app.ui.home.profil.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>